# haskell-playground

./: .gitignore  README.md  workshop.hs
ch6-11-17-25/: haskell-book.cabal
ch6-11-17-25/src/: Chapter11.hs  Chapter17.hs  Chapter25.hs
chap13/: chap13.cabal
chap13-caller/: LICENSE  Main.hs  chap13-caller.cabal
chap13/src/: Hello.hs  Main.hs
chap15/: chap15.cabal  stack.yaml
chap15/src/: Main.hs
cis194-s13/: cis194-s13.cabal
cis194-s13-hw05/: cis194-s13-hw05.cabal
cis194-s13-hw05/src/: Main.hs
cis194-s13-hw06/: cis194-s13-hw06.cabal
cis194-s13-hw06/src/: Hw06Lazy.hs
cis194-s13/src/: Golf.hs  HigherOrder04.hs  LogAnalysis.hs
cis194s13w07/: cis194s13w07.cabal
cis194s13w07/src/: Week07.hs
exercism/accumulate/: Accumulate.hs
exercism/gigasecond/: Gigasecond.hs
exercism/grains/: Grains.hs
exercism/leap/: LeapYear.hs
exercism/rna-transcription/: DNA.hs
exercism/strain/: Strain.hs
exercism/sublist/: Sublist.hs  Sublist02.hs
exercism/sum-of-multiples/: SumOfMultiples.hs
haskell-book/: Chapter06.hs  Chapter11.hs  Jammin.hs  haskell-book.cabal
haskell-book/src/: Main.hs
hb-chap02/: README.md  hb-chap02.cabal
hb-chap02/src/: Main.hs
hb-chap03/: README.md  hb-chap03.cabal
hb-chap03/src/: Main.hs
hb-chap04/: README.md  hb-chap04.cabal
hb-chap04/src/: Main.hs
hb-chap05/: README.md  hb-chap05.cabal
hb-chap05/src/: Main.hs
hb-chap06/: README.md  hb-chap06.cabal
hb-chap06/src/: Main.hs
hb-chap07/: README.md  hb-chap07.cabal
hb-chap16/: README.md  chap16.cabal
hb-chap22/: README.md  chap22.cabal
hb-chap23/: ChangeLog.md  README.md  hb-chap23.cabal  package.yaml
hb-chap24/: README.md  hb-chap24.cabal
httpee/: httpee.cabal
okasaki/: okasaki.cabal
parconc/: sudoku1
sum-of-multiples/: SumOfMultiples.hs
transformer/: transformer.cabal
try-servant/: playground.cabal
try-servant/src/: Api.hs  Lib.hs  Models.hs
type-level/: type-level.cabal
(+19 files in other folders)
