name:                playground
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/playground#readme
license:             BSD3
license-file:        LICENSE
author:              prat
copyright:           2018 prat
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Api
                     , Models
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , monad-logger
                     , persistent
                     , persistent-mysql
                     , persistent-template
                     , servant-server
                     , text
                     , transformers
                     , wai
                     , warp
  default-language:    Haskell2010

executable playground-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , playground
  default-language:    Haskell2010

test-suite playground-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , playground
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
                     , persistent
                     , persistent-mysql
                     , persistent-template
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/playground
